# mykdown

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
docs/: PLANO_IMPLEMENTACAO.md  PLUGINS.md  SMOKE_TEST.md  plano-editor-markdown.md
examples/plugins/callout-example/: mykdown-plugin.json  plugin.js
scripts/: install-local.sh  release-check.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: documents.rs  integration.rs  lib.rs  main.rs  plugins.rs
src/components/: CurrentWeatherIcon.tsx  FileTree.tsx  IconButton.tsx  MarkdownEditor.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  QuickOpenDialog.tsx
src/plugins/: registry.test.ts  registry.ts
src/plugins/flowchart/: FlowchartBlock.tsx  flowchart.test.ts  index.ts  normalize.ts
src/plugins/local/: LocalPluginBlock.tsx  runtime.tsx  types.ts
src/plugins/mermaid/: MermaidBlock.test.ts  MermaidBlock.tsx  config.ts  index.ts
src/plugins/theme-pack/: index.ts  themes.ts
src/services/: export.ts  filesystem.ts  highlight.ts  integration.ts  localPlugins.ts  persistence.test.ts  persistence.ts  theme.test.ts  theme.ts  weather.test.ts  weather.ts
src/store/: workspace.test.ts  workspace.ts
src/types/: files.ts
src/utils/: files.test.ts  files.ts  greeting.test.ts  greeting.ts  scrollSync.test.ts  scrollSync.ts  search.test.ts  search.ts
