[package]
name = "mykdown"
version = "1.0.0-alpha.3"
description = "A personal Markdown editor for macOS"
authors = ["Leandro"]
edition = "2021"

[lib]
name = "mykdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
